# realpath-ext

./: .cirrus.yml  .gitignore  Cargo.toml  README.md  tarpaulin.toml
.github/workflows/: ci.yml
benches/: bench.rs
src/: lib.rs  main.rs  slicevec.rs  util.rs
tests/: test_basic.rs
