[package]
name = "realpath-ext"
version = "0.1.0"
edition = "2018"

description = "An implementation of realpath() (with some extensions) for *nix systems."
authors = ["cptpcrd"]
license = "MIT"
repository = "https://github.com/cptpcrd/realpath-ext"

[features]
default = ["std"]

std = ["libc/std"]

[dependencies]
libc = { version = "0.2", default-features = false }
bitflags = "1.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "realpath-ext"
required-features = ["std"]
